Update:Text overlapp fixed

--- a/src/components/MyProjects/style.css
+++ b/src/components/MyProjects/style.css
@@ -2,7 +2,7 @@
   box-shadow: 4px 8px 16px rgba(0, 0, 0, 0.19), 0 10px 10px rgba(0, 0, 0, 0.23);
   margin: 0 0 0 1rem;
   border-radius: 1.5rem;
-  padding: 2rem;
+  padding: 1rem;
   background-color: #fff;
 }
 
@@ -12,7 +12,9 @@
   justify-content: center;
   align-items: center;
 }
-
+.logo-wrapper {
+  padding: 1rem;
+}
 .myproject__project {
   display: flex;
   flex-direction: column;
@@ -61,6 +63,9 @@
   }
   .myproject__project--info {
     width: 200px;
-    line-height: 1.2;
+    line-height: 1.5;
+  }
+  .logo-wrapper {
+    padding: 0px;
   }
 }
